// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSplitButton is rendered 1`] = `
<div>
  <div
    class="ouiPopover ouiPopover--anchorDownRight ouiSplitButton"
  >
    <div
      class="ouiPopover__anchor"
    >
      <div
        class="ouiSplitButtonControl ouiSplitButtonColor--primary"
      >
        <button
          class="ouiButton ouiButton--primary ouiSplitButtonControl ouiSplitButtonControl--primary"
          data-test-subj="splitButton--primary"
          type="button"
        >
          <span
            class="ouiButtonContent ouiButton__content"
          >
            <span
              class="ouiButton__text"
            >
              Test
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiSplitButton onClick events selection list is opened on drop-down button click 1`] = `
<div>
  <div
    class="ouiPopover ouiPopover--anchorDownRight ouiSplitButton"
  >
    <div
      aria-hidden="true"
      class="ouiPopover__anchor"
      data-aria-hidden="true"
    >
      <div
        class="ouiSplitButtonControl ouiSplitButtonColor--primary"
      >
        <button
          class="ouiButton ouiButton--primary ouiSplitButtonControl ouiSplitButtonControl--primary ouiSplitButtonHairline--primary"
          data-test-subj="splitButton--primary"
          type="button"
        >
          <span
            class="ouiButtonContent ouiButton__content"
          >
            <span
              class="ouiButton__text"
            >
              Test
            </span>
          </span>
        </button>
        <button
          aria-label="Open Selections"
          class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
          data-test-subj="splitButton--dropdown"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="arrowDown"
          />
        </button>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-live="assertive"
        aria-modal="true"
        class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--noShadow ouiPopover__panel ouiPopover__panel--bottom ouiPopover__panel-noArrow"
        role="dialog"
        style="top: 8px; left: -22px; will-change: transform, opacity; z-index: 2000;"
      >
        <div
          aria-hidden="true"
          class="ouiPopover__panelArrow ouiPopover__panelArrow--bottom"
          data-aria-hidden="true"
        />
        <div>
          <p
            aria-hidden="true"
            class="ouiScreenReaderOnly"
            data-aria-hidden="true"
            role="alert"
          >
            You are in a selector of 2 items and must select a single option. Use the up and down keys to navigate or escape to close.
          </p>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="1"
          />
          <div
            data-focus-lock-disabled="false"
          >
            <div>
              <div
                aria-activedescendant="1"
                class="ouiSplitButton__listbox"
                role="listbox"
                tabindex="0"
              >
                <a
                  aria-selected="false"
                  class="ouiContextMenuItem ouiSplitButton__item"
                  color="primary"
                  href="#"
                  id="splitButtonItem_0"
                  rel="noreferrer"
                  role="option"
                >
                  <span
                    class="ouiContextMenu__itemLayout"
                  >
                    <span
                      class="ouiContextMenu__icon"
                      color="inherit"
                      data-ouiicon-type="empty"
                    />
                    <span
                      class="ouiContextMenuItem__text"
                    >
                      <div
                        class="ouiText ouiText--medium"
                      >
                        <div
                          class="ouiTextAlign ouiTextAlign--center"
                        >
                          Option #1
                        </div>
                      </div>
                    </span>
                  </span>
                </a>
                <button
                  aria-selected="true"
                  class="ouiContextMenuItem ouiSplitButton__item"
                  color="primary"
                  id="splitButtonItem_1"
                  role="option"
                  type="button"
                >
                  <span
                    class="ouiContextMenu__itemLayout"
                  >
                    <span
                      class="ouiContextMenu__icon"
                      color="inherit"
                      data-ouiicon-type="check"
                    />
                    <span
                      class="ouiContextMenuItem__text"
                    >
                      <div
                        class="ouiText ouiText--medium"
                      >
                        <div
                          class="ouiTextAlign ouiTextAlign--center"
                        >
                          Option #2
                        </div>
                      </div>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`OuiSplitButton options rendering option with href renders link 1`] = `
<div>
  <div
    class="ouiPopover ouiPopover--anchorDownRight ouiPopover-isOpen ouiSplitButton"
  >
    <div
      aria-hidden="true"
      class="ouiPopover__anchor"
      data-aria-hidden="true"
    >
      <div
        class="ouiSplitButtonControl ouiSplitButtonColor--primary"
      >
        <button
          class="ouiButton ouiButton--primary ouiSplitButtonControl ouiSplitButtonControl--primary ouiSplitButtonHairline--primary"
          data-test-subj="splitButton--primary"
          type="button"
        >
          <span
            class="ouiButtonContent ouiButton__content"
          >
            <span
              class="ouiButton__text"
            >
              Test
            </span>
          </span>
        </button>
        <button
          aria-label="Open Selections"
          class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
          data-test-subj="splitButton--dropdown"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="arrowDown"
          />
        </button>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-live="assertive"
        aria-modal="true"
        class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--noShadow ouiPopover__panel ouiPopover__panel--bottom ouiPopover__panel-isOpen ouiPopover__panel-noArrow"
        role="dialog"
        style="top: 8px; left: -22px; will-change: transform, opacity; z-index: 2000;"
      >
        <div
          aria-hidden="true"
          class="ouiPopover__panelArrow ouiPopover__panelArrow--bottom"
          data-aria-hidden="true"
        />
        <div>
          <p
            aria-hidden="true"
            class="ouiScreenReaderOnly"
            data-aria-hidden="true"
            role="alert"
          >
            You are in a selector of 1 items and must select a single option. Use the up and down keys to navigate or escape to close.
          </p>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="1"
          />
          <div
            data-focus-lock-disabled="false"
          >
            <div>
              <div
                aria-activedescendant="undefined"
                class="ouiSplitButton__listbox"
                role="listbox"
                tabindex="0"
              >
                <a
                  aria-selected="false"
                  class="ouiContextMenuItem ouiSplitButton__item"
                  color="primary"
                  href="#test"
                  id="splitButtonItem_0"
                  rel="noreferrer"
                  role="option"
                >
                  <span
                    class="ouiContextMenu__itemLayout"
                  >
                    <span
                      class="ouiContextMenuItem__text"
                    >
                      <div
                        class="ouiText ouiText--medium"
                      >
                        <div
                          class="ouiTextAlign ouiTextAlign--center"
                        >
                          Option #3
                        </div>
                      </div>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`OuiSplitButton options rendering options are rendered when select is open 1`] = `
<div>
  <div
    class="ouiPopover ouiPopover--anchorDownRight ouiPopover-isOpen ouiSplitButton"
  >
    <div
      aria-hidden="true"
      class="ouiPopover__anchor"
      data-aria-hidden="true"
    >
      <div
        class="ouiSplitButtonControl ouiSplitButtonColor--primary"
      >
        <button
          class="ouiButton ouiButton--primary ouiSplitButtonControl ouiSplitButtonControl--primary ouiSplitButtonHairline--primary"
          data-test-subj="splitButton--primary"
          type="button"
        >
          <span
            class="ouiButtonContent ouiButton__content"
          >
            <span
              class="ouiButton__text"
            >
              Test
            </span>
          </span>
        </button>
        <button
          aria-label="Open Selections"
          class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
          data-test-subj="splitButton--dropdown"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="arrowDown"
          />
        </button>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-live="assertive"
        aria-modal="true"
        class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--noShadow ouiPopover__panel ouiPopover__panel--bottom ouiPopover__panel-isOpen ouiPopover__panel-noArrow"
        role="dialog"
        style="top: 8px; left: -22px; will-change: transform, opacity; z-index: 2000;"
      >
        <div
          aria-hidden="true"
          class="ouiPopover__panelArrow ouiPopover__panelArrow--bottom"
          data-aria-hidden="true"
        />
        <div>
          <p
            aria-hidden="true"
            class="ouiScreenReaderOnly"
            data-aria-hidden="true"
            role="alert"
          >
            You are in a selector of 2 items and must select a single option. Use the up and down keys to navigate or escape to close.
          </p>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="1"
          />
          <div
            data-focus-lock-disabled="false"
          >
            <div>
              <div
                aria-activedescendant="undefined"
                class="ouiSplitButton__listbox"
                role="listbox"
                tabindex="0"
              >
                <a
                  aria-selected="false"
                  class="ouiContextMenuItem ouiSplitButton__item"
                  color="primary"
                  href="#"
                  id="splitButtonItem_0"
                  rel="noreferrer"
                  role="option"
                >
                  <span
                    class="ouiContextMenu__itemLayout"
                  >
                    <span
                      class="ouiContextMenuItem__text"
                    >
                      <div
                        class="ouiText ouiText--medium"
                      >
                        <div
                          class="ouiTextAlign ouiTextAlign--center"
                        >
                          Option #1
                        </div>
                      </div>
                    </span>
                  </span>
                </a>
                <button
                  aria-selected="false"
                  class="ouiContextMenuItem ouiSplitButton__item"
                  color="primary"
                  id="splitButtonItem_1"
                  role="option"
                  type="button"
                >
                  <span
                    class="ouiContextMenu__itemLayout"
                  >
                    <span
                      class="ouiContextMenuItem__text"
                    >
                      <div
                        class="ouiText ouiText--medium"
                      >
                        <div
                          class="ouiTextAlign ouiTextAlign--center"
                        >
                          Option #2
                        </div>
                      </div>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`OuiSplitButton options rendering selectedItem 0 is rendered 1`] = `
<div>
  <div
    class="ouiPopover ouiPopover--anchorDownRight ouiPopover-isOpen ouiSplitButton"
  >
    <div
      aria-hidden="true"
      class="ouiPopover__anchor"
      data-aria-hidden="true"
    >
      <div
        class="ouiSplitButtonControl ouiSplitButtonColor--primary"
      >
        <button
          class="ouiButton ouiButton--primary ouiSplitButtonControl ouiSplitButtonControl--primary ouiSplitButtonHairline--primary"
          data-test-subj="splitButton--primary"
          type="button"
        >
          <span
            class="ouiButtonContent ouiButton__content"
          >
            <span
              class="ouiButton__text"
            >
              Test
            </span>
          </span>
        </button>
        <button
          aria-label="Open Selections"
          class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
          data-test-subj="splitButton--dropdown"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="arrowDown"
          />
        </button>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-live="assertive"
        aria-modal="true"
        class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--noShadow ouiPopover__panel ouiPopover__panel--bottom ouiPopover__panel-isOpen ouiPopover__panel-noArrow"
        role="dialog"
        style="top: 8px; left: -22px; will-change: transform, opacity; z-index: 2000;"
      >
        <div
          aria-hidden="true"
          class="ouiPopover__panelArrow ouiPopover__panelArrow--bottom"
          data-aria-hidden="true"
        />
        <div>
          <p
            aria-hidden="true"
            class="ouiScreenReaderOnly"
            data-aria-hidden="true"
            role="alert"
          >
            You are in a selector of 2 items and must select a single option. Use the up and down keys to navigate or escape to close.
          </p>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="1"
          />
          <div
            data-focus-lock-disabled="false"
          >
            <div>
              <div
                aria-activedescendant="0"
                class="ouiSplitButton__listbox"
                role="listbox"
                tabindex="0"
              >
                <a
                  aria-selected="true"
                  class="ouiContextMenuItem ouiSplitButton__item"
                  color="primary"
                  href="#"
                  id="splitButtonItem_0"
                  rel="noreferrer"
                  role="option"
                >
                  <span
                    class="ouiContextMenu__itemLayout"
                  >
                    <span
                      class="ouiContextMenu__icon"
                      color="inherit"
                      data-ouiicon-type="check"
                    />
                    <span
                      class="ouiContextMenuItem__text"
                    >
                      <div
                        class="ouiText ouiText--medium"
                      >
                        <div
                          class="ouiTextAlign ouiTextAlign--center"
                        >
                          Option #1
                        </div>
                      </div>
                    </span>
                  </span>
                </a>
                <button
                  aria-selected="false"
                  class="ouiContextMenuItem ouiSplitButton__item"
                  color="primary"
                  id="splitButtonItem_1"
                  role="option"
                  type="button"
                >
                  <span
                    class="ouiContextMenu__itemLayout"
                  >
                    <span
                      class="ouiContextMenu__icon"
                      color="inherit"
                      data-ouiicon-type="empty"
                    />
                    <span
                      class="ouiContextMenuItem__text"
                    >
                      <div
                        class="ouiText ouiText--medium"
                      >
                        <div
                          class="ouiTextAlign ouiTextAlign--center"
                        >
                          Option #2
                        </div>
                      </div>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`OuiSplitButton options rendering selectedItem last is rendered 1`] = `
<div>
  <div
    class="ouiPopover ouiPopover--anchorDownRight ouiPopover-isOpen ouiSplitButton"
  >
    <div
      aria-hidden="true"
      class="ouiPopover__anchor"
      data-aria-hidden="true"
    >
      <div
        class="ouiSplitButtonControl ouiSplitButtonColor--primary"
      >
        <button
          class="ouiButton ouiButton--primary ouiSplitButtonControl ouiSplitButtonControl--primary ouiSplitButtonHairline--primary"
          data-test-subj="splitButton--primary"
          type="button"
        >
          <span
            class="ouiButtonContent ouiButton__content"
          >
            <span
              class="ouiButton__text"
            >
              Test
            </span>
          </span>
        </button>
        <button
          aria-label="Open Selections"
          class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
          data-test-subj="splitButton--dropdown"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="arrowDown"
          />
        </button>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-live="assertive"
        aria-modal="true"
        class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--noShadow ouiPopover__panel ouiPopover__panel--bottom ouiPopover__panel-isOpen ouiPopover__panel-noArrow"
        role="dialog"
        style="top: 8px; left: -22px; will-change: transform, opacity; z-index: 2000;"
      >
        <div
          aria-hidden="true"
          class="ouiPopover__panelArrow ouiPopover__panelArrow--bottom"
          data-aria-hidden="true"
        />
        <div>
          <p
            aria-hidden="true"
            class="ouiScreenReaderOnly"
            data-aria-hidden="true"
            role="alert"
          >
            You are in a selector of 3 items and must select a single option. Use the up and down keys to navigate or escape to close.
          </p>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="1"
          />
          <div
            data-focus-lock-disabled="false"
          >
            <div>
              <div
                aria-activedescendant="2"
                class="ouiSplitButton__listbox"
                role="listbox"
                tabindex="0"
              >
                <a
                  aria-selected="false"
                  class="ouiContextMenuItem ouiSplitButton__item"
                  color="primary"
                  href="#"
                  id="splitButtonItem_0"
                  rel="noreferrer"
                  role="option"
                >
                  <span
                    class="ouiContextMenu__itemLayout"
                  >
                    <span
                      class="ouiContextMenu__icon"
                      color="inherit"
                      data-ouiicon-type="empty"
                    />
                    <span
                      class="ouiContextMenuItem__text"
                    >
                      <div
                        class="ouiText ouiText--medium"
                      >
                        <div
                          class="ouiTextAlign ouiTextAlign--center"
                        >
                          Option #1
                        </div>
                      </div>
                    </span>
                  </span>
                </a>
                <button
                  aria-selected="false"
                  class="ouiContextMenuItem ouiSplitButton__item"
                  color="primary"
                  id="splitButtonItem_1"
                  role="option"
                  type="button"
                >
                  <span
                    class="ouiContextMenu__itemLayout"
                  >
                    <span
                      class="ouiContextMenu__icon"
                      color="inherit"
                      data-ouiicon-type="empty"
                    />
                    <span
                      class="ouiContextMenuItem__text"
                    >
                      <div
                        class="ouiText ouiText--medium"
                      >
                        <div
                          class="ouiTextAlign ouiTextAlign--center"
                        >
                          Option #2
                        </div>
                      </div>
                    </span>
                  </span>
                </button>
                <button
                  aria-selected="true"
                  class="ouiContextMenuItem ouiSplitButton__item"
                  color="primary"
                  id="splitButtonItem_2"
                  role="option"
                  type="button"
                >
                  <span
                    class="ouiContextMenu__itemLayout"
                  >
                    <span
                      class="ouiContextMenu__icon"
                      color="inherit"
                      data-ouiicon-type="check"
                    />
                    <span
                      class="ouiContextMenuItem__text"
                    >
                      <div
                        class="ouiText ouiText--medium"
                      >
                        <div
                          class="ouiTextAlign ouiTextAlign--center"
                        >
                          Option #3
                        </div>
                      </div>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`OuiSplitButton props fullWidth is rendered 1`] = `
<div>
  <div
    class="ouiPopover ouiPopover--anchorDownRight ouiSplitButton"
  >
    <div
      class="ouiPopover__anchor"
    >
      <div
        class="ouiSplitButtonControl ouiSplitButtonColor--primary"
      >
        <button
          class="ouiButton ouiButton--primary ouiButton--fullWidth ouiSplitButtonControl ouiSplitButtonControl--primary"
          data-test-subj="splitButton--primary"
          type="button"
        >
          <span
            class="ouiButtonContent ouiButton__content"
          >
            <span
              class="ouiButton__text"
            >
              Test
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiSplitButton simple button display display simple button when options are blank 1`] = `
<div>
  <div
    class="ouiPopover ouiPopover--anchorDownRight ouiSplitButton"
  >
    <div
      class="ouiPopover__anchor"
    >
      <div
        class="ouiSplitButtonControl ouiSplitButtonColor--primary"
      >
        <button
          class="ouiButton ouiButton--primary ouiSplitButtonControl ouiSplitButtonControl--primary"
          data-test-subj="splitButton--primary"
          type="button"
        >
          <span
            class="ouiButtonContent ouiButton__content"
          >
            <span
              class="ouiButton__text"
            >
              Test
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiSplitButton simple button display ignore initiallyOpen when options are blank 1`] = `
<div>
  <div
    class="ouiPopover ouiPopover--anchorDownRight ouiSplitButton"
  >
    <div
      class="ouiPopover__anchor"
    >
      <div
        class="ouiSplitButtonControl ouiSplitButtonColor--primary"
      >
        <button
          class="ouiButton ouiButton--primary ouiSplitButtonControl ouiSplitButtonControl--primary"
          data-test-subj="splitButton--primary"
          type="button"
        >
          <span
            class="ouiButtonContent ouiButton__content"
          >
            <span
              class="ouiButton__text"
            >
              Test
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
